--- a/DogsTestApp/Views/Base.lproj/Main.storyboard
+++ b/DogsTestApp/Views/Base.lproj/Main.storyboard
@@ -92,7 +92,7 @@
                                             <rect key="frame" x="0.0" y="0.0" width="216" height="207"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="THB-Sc-e1g">
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="THB-Sc-e1g">
                                                     <rect key="frame" x="0.0" y="0.0" width="216" height="207"/>
                                                 </imageView>
                                             </subviews>
